// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content Type Builder - Content types Collection Types Get collection type returns full schema and information 1`] = `
{
  "data": {
    "apiID": "test-collection-type",
    "schema": {
      "attributes": {
        "title": {
          "pluginOptions": {
            "i18n": {
              "localized": true,
            },
          },
          "type": "string",
        },
      },
      "collectionName": "test_collection_types",
      "connection": "default",
      "description": "",
      "draftAndPublish": false,
      "kind": "collectionType",
      "name": "Test Collection Type",
      "pluginOptions": {
        "i18n": {
          "localized": true,
        },
      },
      "restrictRelationsTo": null,
      "visible": true,
    },
    "uid": "application::test-collection-type.test-collection-type",
  },
}
`;

exports[`Content Type Builder - Content types Collection Types Get collection type returns full schema and informations with draftAndPublish 1`] = `
{
  "data": {
    "apiID": "ct-with-dp",
    "schema": {
      "attributes": {
        "title": {
          "type": "string",
        },
      },
      "collectionName": "ct_with_dps",
      "connection": "default",
      "description": "",
      "draftAndPublish": true,
      "kind": "collectionType",
      "name": "CT with DP",
      "restrictRelationsTo": null,
      "visible": true,
    },
    "uid": "application::ct-with-dp.ct-with-dp",
  },
}
`;

exports[`Content Type Builder - Content types Single Types Get single type returns full schema and information 1`] = `
{
  "data": {
    "apiID": "test-single-type",
    "schema": {
      "attributes": {
        "title": {
          "pluginOptions": {
            "i18n": {
              "localized": true,
            },
          },
          "type": "string",
        },
      },
      "collectionName": "test_single_types",
      "connection": "default",
      "description": "",
      "draftAndPublish": false,
      "kind": "singleType",
      "name": "Test Single Type",
      "pluginOptions": {
        "i18n": {
          "localized": true,
        },
      },
      "restrictRelationsTo": null,
      "visible": true,
    },
    "uid": "application::test-single-type.test-single-type",
  },
}
`;
